fixed injust ranking when score was the same

--- a/templates/index.html
+++ b/templates/index.html
@@ -459,6 +459,8 @@
                 break;
             }
 
+            // TODO votes sollen doch anonym sein!
+
             let personName = voteLog[i]['person'];
             let operation = voteLog[i]['operation'];
             const timestamp = voteLog[i]['timestamp'];
